@startuml
skinparam linetype ortho

!include ./src/main/java/br/com/frameworkPpr/xadrez/multiton/time/puml/estruturaTime.puml
class Tabuleiro {
    - Peca[][] pecas
    - int pecasBrancas
    - int pecasPretas
    + removerPeca(int x, int y)
}

class Peca {
    - String nome
    - Time time
    + getTime(): Time
}

Time --* Peca
Tabuleiro --> Peca : gerencia diretamente
@enduml